--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600;700&display=swap" rel="stylesheet"> 
     <!-- FIN -->
+
+    <script src="https://sdk.mercadopago.com/js/v2"></script>
+
+    
     <title>Gym Abito</title>
   </head>
   <body>
